tests/sumo/output/e1/errors/id_missing/errors.sumo
Error: Attribute 'id' is missing in definition of a e1Detector.
Quitting (on error).
